test/scc/expr/semantic-errors/132.a
132.t:3:20: error: array index in initializer not of integer type